[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/resources/gui/blueSheet.blue_panel.atlastex" type="Texture" id=1]
[ext_resource path="res://assets/resources/gui/blueSheet.blue_sliderLeft.atlastex" type="Texture" id=2]
[ext_resource path="res://assets/resources/gui/blueSheet.blue_sliderRight.atlastex" type="Texture" id=3]
[ext_resource path="res://assets/resources/sheet.planeRed1.atlastex" type="Texture" id=4]
[ext_resource path="res://assets/resources/gui/blueSheet.blue_button13.atlastex" type="Texture" id=5]
[ext_resource path="res://assets/resources/sheet.starGold.atlastex" type="Texture" id=6]
[ext_resource path="res://src/resources/Theme.tres" type="Theme" id=7]
[ext_resource path="res://src/Hangar.gd" type="Script" id=8]
[ext_resource path="res://assets/resources/gui/blueSheet.blue_button12.atlastex" type="Texture" id=9]
[ext_resource path="res://assets/resources/gui/blueSheet.blue_button11.atlastex" type="Texture" id=10]
[ext_resource path="res://assets/imagenes/sheet_white2x.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 300, 500, 100, 100 )

[node name="Hangar" type="Control"]
anchor_bottom = 1.0
margin_right = 361.0
margin_bottom = -623.0
theme = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="NinePatchRect" parent="."]
margin_right = 361.0
margin_bottom = 177.0
texture = ExtResource( 1 )
patch_margin_left = 33
patch_margin_top = 33
patch_margin_right = 33
patch_margin_bottom = 33
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avioneta" type="TextureRect" parent="Panel/Container"]
margin_top = 21.0
margin_right = 361.0
margin_bottom = 94.0
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lock" type="TextureRect" parent="Panel/Container/Avioneta"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -25.0
margin_bottom = 2.0
texture = SubResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/Container"]
margin_top = 98.0
margin_right = 361.0
margin_bottom = 155.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Container/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 353.0
margin_bottom = 57.0
alignment = 1

[node name="Izquierda" type="TextureButton" parent="Panel/Container/MarginContainer/HBoxContainer"]
margin_right = 73.0
margin_bottom = 49.0
size_flags_horizontal = 3
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blueSheetblue_sliderLeft" type="TextureRect" parent="Panel/Container/MarginContainer/HBoxContainer/Izquierda"]
margin_right = 81.0
margin_bottom = 49.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comprar" type="TextureButton" parent="Panel/Container/MarginContainer/HBoxContainer"]
margin_left = 77.0
margin_right = 267.0
margin_bottom = 49.0
texture_normal = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Container/MarginContainer/HBoxContainer/Comprar"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sheetstarGold" type="TextureRect" parent="Panel/Container/MarginContainer/HBoxContainer/Comprar/HBoxContainer"]
margin_left = 39.0
margin_right = 78.0
margin_bottom = 50.0
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Container/MarginContainer/HBoxContainer/Comprar/HBoxContainer"]
margin_left = 82.0
margin_right = 150.0
margin_bottom = 50.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Derecha" type="TextureButton" parent="Panel/Container/MarginContainer/HBoxContainer"]
margin_left = 271.0
margin_right = 345.0
margin_bottom = 49.0
size_flags_horizontal = 3
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blueSheetblue_sliderRight" type="TextureRect" parent="Panel/Container/MarginContainer/HBoxContainer/Derecha"]
margin_right = 82.0
margin_bottom = 49.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Panel/Container/MarginContainer/HBoxContainer/Izquierda" to="." method="_on_Izquierda_button_up"]
[connection signal="button_up" from="Panel/Container/MarginContainer/HBoxContainer/Comprar" to="." method="_on_Comprar_button_up"]
[connection signal="button_up" from="Panel/Container/MarginContainer/HBoxContainer/Derecha" to="." method="_on_Derecha_button_up"]
